# webpier

./: CHANGELOG.md  CMakeLists.txt  CMakePresets.json  README.md  conanfile.txt  vcpkg.json
.github/workflows/: artifacts.yml  release.yml
assets/: webpier.icns
cmake/: utils.cmake
darwin/: Info.plist.in  postinst.sh.in  readme.txt  webpier.conf.in  welcome.txt
debian/: README.Debian  changelog  copyright  webpier.conf.in  webpier.desktop.in
linux/: README.Debian  changelog  changelog.rpm  webpier.conf.in  webpier.desktop.in
src/: utils.h
src/backend/: client.cpp  client.h  ipc.cpp  ipc.h  main.cpp  message.cpp  message.h  server.cpp  server.h  tunnel.cpp
src/slipway/: channel.cpp  channel.h  client.cpp  client.h  message.cpp  message.h  server.cpp  slipway.h
src/slipway/tests/: channel.cpp  message.cpp  slipway.cpp
src/store/: context.cpp  context.h  utils.cpp  utils.h
src/store/tests/: context.cpp  utils.cpp
src/tests/: utils.cpp
src/ui/: aboutdialog.cpp  aboutdialog.h  context.cpp  context.h  exchangedialog.cpp  exchangedialog.h  logo.h  mac.mm  main.cpp  mainframe.cpp  mainframe.h  messagedialog.cpp  servicedialog.cpp  servicedialog.h  settingsdialog.cpp  settingsdialog.h  startupdialog.cpp  startupdialog.h  template.fbp
store/: context.cpp  context.h  utils.cpp  utils.h
store/tests/: context.cpp  utils.cpp
tests/: context.cpp  message.cpp  slipway.cpp  utils.cpp
ui/: aboutdialog.cpp  aboutdialog.h  context.cpp  context.h  exchangedialog.cpp  exchangedialog.h  exportdialog.cpp  exportdialog.h  importdialog.cpp  importdialog.h  logo.h  main.cpp  mainframe.cpp  mainframe.h  messagedialog.cpp  messagedialog.h  servicedialog.cpp  servicedialog.h  settingsdialog.cpp  settingsdialog.h  startupdialog.cpp  startupdialog.h  template.fbp
windows/: cleanup.ps1  modules.xml.in  postinstall.xml.in  task.xml  webpier.rc
